Changed project-card colors and the contact form colors. Have to fix bug with the css on Featured projects section where the description section is not overlapping the image like it should. Also all images that go into featured projects should be the same height.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -622,7 +622,7 @@ h2 {
 .education-item {
   margin-bottom: 2rem;
   padding: 1.5rem;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(69, 34, 52, 0.7);
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -714,6 +714,12 @@ h2 {
   margin-top: 20px;
   padding: 10px 20px;
   background-color: rgba(69, 34, 52, 1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease;
+}
+
+.project-description:hover {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .project-image img {
@@ -741,12 +747,14 @@ h2 {
   /* Adjust color and opacity as needed */
   transition: background-color 0.3s ease;
   border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .image-overlay:hover::after {
   background-color: rgba(42, 35, 60, 0);
   /* Fully transparent on hover */
   border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .image-overlay img {
@@ -782,6 +790,7 @@ h2 {
 .project-links {
   display: flex;
   gap: 1rem;
+  width: fit-content;
 }
 
 .icon {
@@ -796,7 +805,7 @@ h2 {
 }
 
 .project-card {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(69, 34, 52, 0.7);
   border-radius: 8px;
   padding: 1.5rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -817,6 +826,7 @@ h2 {
   border-radius: 4px;
   cursor: pointer;
   font-size: 1rem;
+  width: auto;
 }
 
 .show-more-btn:hover {
@@ -846,6 +856,10 @@ h2 {
 
 .contact-section h2 {
   width: max-content;
+}
+
+.contact-form {
+  background-color: rgba(69, 34, 52, 0.8);
 }
 
 /* Contact Form Styles */
